--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "e-commerce-app",
-  "version": "1.0.0", 
+  "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/yushaushaibu/e-commerce-app#readme",
   "dependencies": {
+    "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
